# TRABALHO_AED

./: .gitignore  CMakeLists.txt  README.md
include/: arquivo.h  emprestimo.h  erros.h  livro.h  modelos.h  usuario.h  utils.h
src/: arquivo.c  emprestimo.c  livro.c  main.c  usuario.c  utils.c
